mantle-build/tests/ui/bad_rpc_sig.stderr
error: RPC definition cannot have generic parameters.
  --> $DIR/bad_rpc_sig.rs:11:33
   |
11 |     pub unsafe extern "C" fn wtf<T: std::fmt::Debug>(&self, ctx: &Context, val: T) {
   |                                 ^^^^^^^^^^^^^^^^^^^^

error: RPC method cannot be unsafe.
  --> $DIR/bad_rpc_sig.rs:11:5
   |
11 | /     pub unsafe extern "C" fn wtf<T: std::fmt::Debug>(&self, ctx: &Context, val: T) {
12 | |         println!("val: {:?}", val);
13 | |     }
   | |_____^

error: RPC method cannot declare an ABI.
  --> $DIR/bad_rpc_sig.rs:11:9
   |
11 |     pub unsafe extern "C" fn wtf<T: std::fmt::Debug>(&self, ctx: &Context, val: T) {
   |         ^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

